# sitpexercises

./: .gitignore  CMakeLists.txt
task1/: CMakeLists.txt
task1/include/: Builder.h  Rectangle.h  SITP.h
task1/src/: main.cpp
task3/: CMakeLists.txt
task3/include/: AdvancedSITP.h  BasicSITP.h
task3/solution/: CMakeLists.txt
task3/solution/include/: AdvancedSITP.h  BasicSITP.h
task3/solution/src/: main.cpp
task3/solution/test/: AdvancedSITPTests.cpp  BasicSITPTests.cpp
task4/: CMakeLists.txt
task4/include/: SITP.h
task4/solution/: CMakeLists.txt
task4/solution/include/: SITP.h
task4/solution/src/: main.cpp
task4/solution/test/: SITPTests.cpp
task4/src/: main.cpp
task4/test/: SITPTests.cpp
task5/: CMakeLists.txt
task5/include/: RenderConfig.h  RenderConfigBuilder.h
task5/solution/: CMakeLists.txt
task5/solution/include/: RenderConfig.h  RenderConfigBuilder.h
task5/solution/src/: main.cpp
task5/solution/test/: RenderConfigTests.cpp
task5/src/: main.cpp
