cmake_minimum_required(VERSION 3.10)
project(exercise-sitp)

# C++17 als Standard setzen
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Aufgaben als Unterordner hinzufügen
add_subdirectory(task1)
add_subdirectory(task2)
add_subdirectory(task3)
add_subdirectory(task4)
add_subdirectory(task5)
